[metadata]
name = Divingbell
description-file = README.md
author = The Airship Authors
author-email = airship-discuss@lists.airshipit.org
home-page = https://airship-divingbell.readthedocs.io/
summary = Lightweight solution for Bare metal configuration management and package manager orchestration

classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Shellscript

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
warnerrors = True
